examples/test/testpolicy10887.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10887
  namespace: namespace485
spec:
  podSelector:
    matchLabels:
      key34: value47
      key48: value5
      key40: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value49
          key6: value41
      podSelector:
        matchLabels:
          key37: value9
          key40: value25
          key16: value42
